--- a/history.txt
+++ b/history.txt
@@ -55,3 +55,18 @@
    55  git add backup.sql 
    56  history
    57  history > history.txt
+   58  cat history.txt 
+   59  git add history.txt 
+   60  git status
+   61  git commit -m "first commit, nothing important here"
+   62  git config --global user.email "kehoed@njit.edu"
+   63  git config --global user.name "DJ Kehoe"
+   64  git commit -m "first commit, nothing important here"
+   65  sudo apt-get install gitk
+   66  gitk
+   67  history
+   68  git log
+   69  git remote add origin https://github.com/engineerOfLies/IT635Spring17.git
+   70  git push -u origin master
+   71  history
+   72  history > history.txt
